# ros_kafka_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
cmake/: FindLibRDKafka.cmake
config/: producer.yaml
examples/: ExampleConsumer.cpp  ExampleProducer.cpp
include/ros_kafka/: ros_kafka_common_config.h  ros_kafka_message_consumer.h  ros_kafka_message_producer.h  ros_kafka_serialization.h  timestamp_util.h  unassigned_partitioner.h
launch/: example_consumer.launch  example_producer.launch
