<?xml version="1.0"?>
<package format="2">
  <name>ros_kafka</name>
  <version>0.0.0</version>
  <description>Header library for writing from ROS to Kafka and vice versa</description>

  <author email="lennart.niecksch@dfki.de">Lennart Niecksch</author>
  <maintainer email="lennart.niecksch@dfki.de">Lennart Niecksch</maintainer>
  <license>BSD</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ros-kafka-producer</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <!-- for examples only -->
  <build_depend>std_msgs</build_depend>
  <build_depend>librdkafka</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <!-- for examples only -->
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>librdkafka</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>librdkafka</exec_depend>
  <!-- for examples only -->
  <exec_depend>std_msgs</exec_depend>
    
</package>
